# Ascend-Embedded-Experiment

./: README.md  readme.txt
Ascend310/: CMakeLists.txt
Ascend310/inc/: adxl345.h  ds1339u.h  esp32_c3.h  font.h  human_segmentation.h  i2c.h  key.h  led.h  ms1100.h  multiButton.h  pca9557.h  sht20.h  spi.h  ssd1306.h  task.h  uart.h  v4L2_v2.h  v4l2.h  yolov3.h
Ascend310/scripts/: param.conf
Ascend310/src/: CMakeLists.txt  adxl345.c  ds1339u.c  esp32_c3.c  human_segmentation.cpp  i2c.c  key.c  led.c  main.cpp  ms1100.c  multiButton.c  object_detect.cpp  pca9557.c  sht20.c  spi.c  ssd1306.c  task.c  uart.c  v4L2_v2.c  v4l2.c  yolov3.cpp
cmakelist_sample/output/: target
cmakelist_sample/src/: CMakeLists.txt  main.c
gcc_sample/: HelloWorld.c
human_segmentation/src/: CMakeLists.txt  main.cpp
makefile_sample/: Makefile  fun1.c  fun1.h  fun2.c  fun2.h  main.c
